# just-chat

./: CMakeLists.txt  LICENSE  default.nix
src/: main.cpp
src/Lib/JSON/: JsonConcept.cpp  JsonConcept.h
src/Lib/Networking/: Client.cpp  Client.h  Server.cpp  Server.h
src/Lib/Networking/ClientPart/: Client.cpp  Client.h
src/Lib/Networking/ServerPart/: ClientConnection.cpp  ClientConnection.h  Server.cpp  Server.h
src/Widgets/MainWindow/: mainwindow.ui
src/Widgets/MainWindow/Source/: mainwindow.cpp  mainwindow.h
